--- a/src/app/core/blog/components/one-post/one-post.component.scss
+++ b/src/app/core/blog/components/one-post/one-post.component.scss
@@ -5,14 +5,12 @@
 }
 
 mat-card {
-  width: 80%;
-  margin: 20px auto;
-  padding: 20px;
+  margin: 10px;
   text-align: center;
 }
 
-mat-card-title, mat-card-subtitle  {
-  font-size: 24px;
+mat-card-title,
+mat-card-subtitle {
   font-weight: bold;
   margin-bottom: 10px;
   display: flex;
@@ -20,7 +18,17 @@ mat-card-title, mat-card-subtitle  {
 }
 
 mat-card-content {
-  font-size: 16px;
-  line-height: 1.5;
-  text-align: left;
+  margin-top: 20px;
+}
+
+.item {
+  border: 1px solid black;
+  padding: 10px;
+  margin: 10px;
+  border-radius: 10px;
+}
+
+.author {
+  font-size: 15px;
+  font-weight: bold;
 } 
