--- a/src/app/core/authentication/auth.component.html
+++ b/src/app/core/authentication/auth.component.html
@@ -1,27 +1,28 @@
 <div class="container">
   <mat-card>
     <mat-card-header>
-      <mat-card-title>
-        Logowanie
-      </mat-card-title>
+      <mat-card-title> Logowanie </mat-card-title>
     </mat-card-header>
     <mat-card-content>
-      <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+      <form (submit)="submitForm($event)">
         <mat-form-field>
-          <input matInput placeholder="login" formControlName="login">
-          <mat-error>
-            Nieprawidłowy login
-          </mat-error>
+          <input matInput placeholder="login" [field]="loginForm.login">
+          @if(loginForm.login().invalid() && loginForm.login().touched()){
+          @for (error of loginForm.login().errors(); track error.kind) {
+          <mat-error> {{ error.message }} </mat-error>
+          }
+          }
         </mat-form-field>
         <mat-form-field>
-          <input matInput placeholder="password" type="password" formControlName="password">
-          <mat-error>
-            Nieprawidłowy hasło
-          </mat-error>
+          <input matInput placeholder="password" type="password" [field]="loginForm.password">
+          @if(loginForm.password().touched()){
+          @for (error of loginForm.password().errors(); track error.kind) {
+          <mat-error> {{ error.message }} </mat-error>
+          }
+          }
         </mat-form-field>
-        <button mat-raised-button color="primary" type="submit" [disabled]="!loginForm.valid">
-          Zaloguj
-        </button>
+        <button mat-raised-button color="primary" type="submit"
+          [disabled]="loginForm().invalid() || loginForm().submitting()">Zaloguj</button>
       </form>
     </mat-card-content>
   </mat-card>
